y.output
   0  $accept : main $end

   1  main : program

   2  program : head_declaration
   3          | head_declaration program

   4  head_declaration : line_statement
   5                   | functions

   6  declaration : type list_of_declarators

   7  line_statement : line_statement ';'
   8                 | declaration
   9                 | declarator_initialization
  10                 | RETURN complex_expression

  11  functions : builtin_functions
  12            | user_function

  13  builtin_functions : if_block
  14                    | loop_functions

  15  loop_functions : for_block
  16                 | do_while_block
  17                 | while_block

  18  if_block : IF '(' boolean_expr ')' line_statement
  19           | IF '(' boolean_expr ')' '{' program '}'
  20           | IF '(' boolean_expr ')' line_statement else_block
  21           | IF '(' boolean_expr ')' '{' program '}' else_block

  22  else_block : ELSE line_statement
  23             | ELSE '{' program '}'

  24  while_block : WHILE '(' boolean_expr ')' line_statement
  25              | WHILE '(' boolean_expr ')' '{' program '}'

  26  do_while_block : DO line_statement WHILE '(' boolean_expr ')' ';'
  27                 | DO '{' program '}' WHILE '(' boolean_expr ')' ';'

  28  for_block : FOR '(' for_block_inits ';' for_block_boolean_expr ';' for_block_inits_update ')' line_statement
  29            | FOR '(' for_block_inits ';' for_block_boolean_expr ';' for_block_inits_update ')' '{' program '}'

  30  for_block_inits : for_block_single_init
  31                  | for_block_single_init ',' for_block_inits

  32  for_block_single_init : IDENTIFIER ASSIGNMENT initializator

  33  for_block_inits_update : IDENTIFIER ASSIGNMENT initializator
  34                         | IDENTIFIER ASSIGNMENT initializator ',' for_block_inits_update

  35  for_block_boolean_expr : boolean_expr
  36                         | boolean_expr ',' for_block_boolean_expr

  37  boolean_expr : boolean_expr_simple
  38               |
  39               | boolean_expr_simple OR boolean_expr

  40  boolean_expr_simple : complex_expression
  41                      | complex_expression boolean_operator boolean_expr
  42                      | '(' complex_expression boolean_operator boolean_expr ')'
  43                      | NOT '(' complex_expression boolean_operator boolean_expr ')'

  44  list_of_declarators : declarator_initialization
  45                      | list_of_declarators ',' declarator_initialization

  46  declarator_initialization : declarator ASSIGNMENT initializator
  47                            | declarator

  48  initializator : BITWISE_AND IDENTIFIER
  49                | BITWISE_XOR IDENTIFIER
  50                | _NULL
  51                | complex_expression

  52  complex_expression : '(' complex_expression ')'
  53                     | basic_expression
  54                     | basic_expression operator complex_expression

  55  basic_expression : function_result
  56                   | terminal_const_values
  57                   | IDENTIFIER
  58                   | IDENTIFIER '[' INT_CONSTANT_VALUE ']'
  59                   | '|' IDENTIFIER '|'

  60  function_result : IDENTIFIER '(' ')'
  61                  | IDENTIFIER '(' parameters_list ')'

  62  parameters_list : complex_expression
  63                  | complex_expression ',' parameters_list

  64  terminal_const_values : INT_CONSTANT_VALUE
  65                        | BOOL_CONSTANT_VALUE
  66                        | BIN_CONSTANT_VALUE
  67                        | OCT_CONSTANT_VALUE
  68                        | HEX_CONSTANT_VALUE
  69                        | literals

  70  literals : CHAR_LITERAL
  71           | STRING_VALUE

  72  declarator : IDENTIFIER
  73             | declarator '(' ')'
  74             | declarator '(' params_types_list ')'
  75             | declarator '[' ']'
  76             | declarator '[' array_size ']'

  77  params_types_list : type
  78                    | params_types_list ',' type
  79                    | type IDENTIFIER
  80                    | params_types_list ',' type IDENTIFIER

  81  array_size : array_size ',' INT_CONSTANT_VALUE
  82             | complex_expression

  83  type : BOOLEAN_TYPE
  84       | CHAR_TYPE
  85       | VOID
  86       | INT
  87       | INTP
  88       | CHARP
  89       | STRING

  90  operator : MINUS_OP
  91           | PLUS_OP
  92           | DIVISION_OP
  93           | MULT_OP

  94  boolean_operator : EQUAL
  95                   | GREAT_EQUAL
  96                   | LESS_EQUAL
  97                   | GREAT_THEN
  98                   | LESS_THEN
  99                   | NOT_EQUAL
 100                   | OR_AND_DELIMITER

 101  OR_AND_DELIMITER : AND
 102                   | OR

state 0
	$accept : . main $end  (0)

	BOOLEAN_TYPE  shift 1
	CHAR_TYPE  shift 2
	VOID  shift 3
	INT  shift 4
	STRING  shift 5
	INTP  shift 6
	CHARP  shift 7
	IF  shift 8
	WHILE  shift 9
	DO  shift 10
	FOR  shift 11
	RETURN  shift 12
	IDENTIFIER  shift 13
	user_function  shift 14
	.  error

	main  goto 15
	program  goto 16
	head_declaration  goto 17
	line_statement  goto 18
	functions  goto 19
	declaration  goto 20
	type  goto 21
	declarator_initialization  goto 22
	builtin_functions  goto 23
	if_block  goto 24
	loop_functions  goto 25
	for_block  goto 26
	do_while_block  goto 27
	while_block  goto 28
	declarator  goto 29


state 1
	type : BOOLEAN_TYPE .  (83)

	.  reduce 83


state 2
	type : CHAR_TYPE .  (84)

	.  reduce 84


state 3
	type : VOID .  (85)

	.  reduce 85


state 4
	type : INT .  (86)

	.  reduce 86


state 5
	type : STRING .  (89)

	.  reduce 89


state 6
	type : INTP .  (87)

	.  reduce 87


state 7
	type : CHARP .  (88)

	.  reduce 88


state 8
	if_block : IF . '(' boolean_expr ')' line_statement  (18)
	if_block : IF . '(' boolean_expr ')' '{' program '}'  (19)
	if_block : IF . '(' boolean_expr ')' line_statement else_block  (20)
	if_block : IF . '(' boolean_expr ')' '{' program '}' else_block  (21)

	'('  shift 30
	.  error


state 9
	while_block : WHILE . '(' boolean_expr ')' line_statement  (24)
	while_block : WHILE . '(' boolean_expr ')' '{' program '}'  (25)

	'('  shift 31
	.  error


state 10
	do_while_block : DO . line_statement WHILE '(' boolean_expr ')' ';'  (26)
	do_while_block : DO . '{' program '}' WHILE '(' boolean_expr ')' ';'  (27)

	BOOLEAN_TYPE  shift 1
	CHAR_TYPE  shift 2
	VOID  shift 3
	INT  shift 4
	STRING  shift 5
	INTP  shift 6
	CHARP  shift 7
	RETURN  shift 12
	IDENTIFIER  shift 13
	'{'  shift 32
	.  error

	line_statement  goto 33
	declaration  goto 20
	type  goto 21
	declarator_initialization  goto 22
	declarator  goto 29


state 11
	for_block : FOR . '(' for_block_inits ';' for_block_boolean_expr ';' for_block_inits_update ')' line_statement  (28)
	for_block : FOR . '(' for_block_inits ';' for_block_boolean_expr ';' for_block_inits_update ')' '{' program '}'  (29)

	'('  shift 34
	.  error


state 12
	line_statement : RETURN . complex_expression  (10)

	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 43
	'|'  shift 44
	.  error

	complex_expression  goto 45
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	literals  goto 49


state 13
	declarator : IDENTIFIER .  (72)

	.  reduce 72


state 14
	functions : user_function .  (12)

	.  reduce 12


state 15
	$accept : main . $end  (0)

	$end  accept


state 16
	main : program .  (1)

	.  reduce 1


state 17
	program : head_declaration .  (2)
	program : head_declaration . program  (3)

	BOOLEAN_TYPE  shift 1
	CHAR_TYPE  shift 2
	VOID  shift 3
	INT  shift 4
	STRING  shift 5
	INTP  shift 6
	CHARP  shift 7
	IF  shift 8
	WHILE  shift 9
	DO  shift 10
	FOR  shift 11
	RETURN  shift 12
	IDENTIFIER  shift 13
	user_function  shift 14
	$end  reduce 2
	'}'  reduce 2

	program  goto 50
	head_declaration  goto 17
	line_statement  goto 18
	functions  goto 19
	declaration  goto 20
	type  goto 21
	declarator_initialization  goto 22
	builtin_functions  goto 23
	if_block  goto 24
	loop_functions  goto 25
	for_block  goto 26
	do_while_block  goto 27
	while_block  goto 28
	declarator  goto 29


state 18
	head_declaration : line_statement .  (4)
	line_statement : line_statement . ';'  (7)

	';'  shift 51
	$end  reduce 4
	BOOLEAN_TYPE  reduce 4
	CHAR_TYPE  reduce 4
	VOID  reduce 4
	INT  reduce 4
	STRING  reduce 4
	INTP  reduce 4
	CHARP  reduce 4
	IF  reduce 4
	WHILE  reduce 4
	DO  reduce 4
	FOR  reduce 4
	RETURN  reduce 4
	IDENTIFIER  reduce 4
	user_function  reduce 4
	'}'  reduce 4


state 19
	head_declaration : functions .  (5)

	.  reduce 5


state 20
	line_statement : declaration .  (8)

	.  reduce 8


state 21
	declaration : type . list_of_declarators  (6)

	IDENTIFIER  shift 13
	.  error

	list_of_declarators  goto 52
	declarator_initialization  goto 53
	declarator  goto 29


state 22
	line_statement : declarator_initialization .  (9)

	.  reduce 9


state 23
	functions : builtin_functions .  (11)

	.  reduce 11


state 24
	builtin_functions : if_block .  (13)

	.  reduce 13


state 25
	builtin_functions : loop_functions .  (14)

	.  reduce 14


state 26
	loop_functions : for_block .  (15)

	.  reduce 15


state 27
	loop_functions : do_while_block .  (16)

	.  reduce 16


state 28
	loop_functions : while_block .  (17)

	.  reduce 17


state 29
	declarator_initialization : declarator . ASSIGNMENT initializator  (46)
	declarator_initialization : declarator .  (47)
	declarator : declarator . '(' ')'  (73)
	declarator : declarator . '(' params_types_list ')'  (74)
	declarator : declarator . '[' ']'  (75)
	declarator : declarator . '[' array_size ']'  (76)

	ASSIGNMENT  shift 54
	'('  shift 55
	'['  shift 56
	$end  reduce 47
	BOOLEAN_TYPE  reduce 47
	CHAR_TYPE  reduce 47
	VOID  reduce 47
	INT  reduce 47
	STRING  reduce 47
	INTP  reduce 47
	CHARP  reduce 47
	IF  reduce 47
	ELSE  reduce 47
	WHILE  reduce 47
	DO  reduce 47
	FOR  reduce 47
	RETURN  reduce 47
	IDENTIFIER  reduce 47
	';'  reduce 47
	user_function  reduce 47
	'}'  reduce 47
	','  reduce 47


state 30
	if_block : IF '(' . boolean_expr ')' line_statement  (18)
	if_block : IF '(' . boolean_expr ')' '{' program '}'  (19)
	if_block : IF '(' . boolean_expr ')' line_statement else_block  (20)
	if_block : IF '(' . boolean_expr ')' '{' program '}' else_block  (21)
	boolean_expr : .  (38)

	NOT  shift 57
	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 58
	'|'  shift 44
	')'  reduce 38

	complex_expression  goto 59
	boolean_expr  goto 60
	boolean_expr_simple  goto 61
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	literals  goto 49


state 31
	while_block : WHILE '(' . boolean_expr ')' line_statement  (24)
	while_block : WHILE '(' . boolean_expr ')' '{' program '}'  (25)
	boolean_expr : .  (38)

	NOT  shift 57
	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 58
	'|'  shift 44
	')'  reduce 38

	complex_expression  goto 59
	boolean_expr  goto 62
	boolean_expr_simple  goto 61
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	literals  goto 49


state 32
	do_while_block : DO '{' . program '}' WHILE '(' boolean_expr ')' ';'  (27)

	BOOLEAN_TYPE  shift 1
	CHAR_TYPE  shift 2
	VOID  shift 3
	INT  shift 4
	STRING  shift 5
	INTP  shift 6
	CHARP  shift 7
	IF  shift 8
	WHILE  shift 9
	DO  shift 10
	FOR  shift 11
	RETURN  shift 12
	IDENTIFIER  shift 13
	user_function  shift 14
	.  error

	program  goto 63
	head_declaration  goto 17
	line_statement  goto 18
	functions  goto 19
	declaration  goto 20
	type  goto 21
	declarator_initialization  goto 22
	builtin_functions  goto 23
	if_block  goto 24
	loop_functions  goto 25
	for_block  goto 26
	do_while_block  goto 27
	while_block  goto 28
	declarator  goto 29


state 33
	line_statement : line_statement . ';'  (7)
	do_while_block : DO line_statement . WHILE '(' boolean_expr ')' ';'  (26)

	WHILE  shift 64
	';'  shift 51
	.  error


state 34
	for_block : FOR '(' . for_block_inits ';' for_block_boolean_expr ';' for_block_inits_update ')' line_statement  (28)
	for_block : FOR '(' . for_block_inits ';' for_block_boolean_expr ';' for_block_inits_update ')' '{' program '}'  (29)

	IDENTIFIER  shift 65
	.  error

	for_block_inits  goto 66
	for_block_single_init  goto 67


state 35
	basic_expression : IDENTIFIER .  (57)
	basic_expression : IDENTIFIER . '[' INT_CONSTANT_VALUE ']'  (58)
	function_result : IDENTIFIER . '(' ')'  (60)
	function_result : IDENTIFIER . '(' parameters_list ')'  (61)

	'('  shift 68
	'['  shift 69
	$end  reduce 57
	MINUS_OP  reduce 57
	PLUS_OP  reduce 57
	DIVISION_OP  reduce 57
	MULT_OP  reduce 57
	BOOLEAN_TYPE  reduce 57
	CHAR_TYPE  reduce 57
	VOID  reduce 57
	INT  reduce 57
	STRING  reduce 57
	INTP  reduce 57
	CHARP  reduce 57
	IF  reduce 57
	ELSE  reduce 57
	WHILE  reduce 57
	DO  reduce 57
	FOR  reduce 57
	RETURN  reduce 57
	AND  reduce 57
	EQUAL  reduce 57
	GREAT_THEN  reduce 57
	GREAT_EQUAL  reduce 57
	LESS_THEN  reduce 57
	LESS_EQUAL  reduce 57
	NOT_EQUAL  reduce 57
	OR  reduce 57
	IDENTIFIER  reduce 57
	';'  reduce 57
	user_function  reduce 57
	')'  reduce 57
	'}'  reduce 57
	','  reduce 57
	']'  reduce 57


state 36
	literals : STRING_VALUE .  (71)

	.  reduce 71


state 37
	literals : CHAR_LITERAL .  (70)

	.  reduce 70


state 38
	terminal_const_values : INT_CONSTANT_VALUE .  (64)

	.  reduce 64


state 39
	terminal_const_values : BOOL_CONSTANT_VALUE .  (65)

	.  reduce 65


state 40
	terminal_const_values : BIN_CONSTANT_VALUE .  (66)

	.  reduce 66


state 41
	terminal_const_values : OCT_CONSTANT_VALUE .  (67)

	.  reduce 67


state 42
	terminal_const_values : HEX_CONSTANT_VALUE .  (68)

	.  reduce 68


state 43
	complex_expression : '(' . complex_expression ')'  (52)

	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 43
	'|'  shift 44
	.  error

	complex_expression  goto 70
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	literals  goto 49


state 44
	basic_expression : '|' . IDENTIFIER '|'  (59)

	IDENTIFIER  shift 71
	.  error


state 45
	line_statement : RETURN complex_expression .  (10)

	.  reduce 10


state 46
	complex_expression : basic_expression .  (53)
	complex_expression : basic_expression . operator complex_expression  (54)

	MINUS_OP  shift 72
	PLUS_OP  shift 73
	DIVISION_OP  shift 74
	MULT_OP  shift 75
	$end  reduce 53
	BOOLEAN_TYPE  reduce 53
	CHAR_TYPE  reduce 53
	VOID  reduce 53
	INT  reduce 53
	STRING  reduce 53
	INTP  reduce 53
	CHARP  reduce 53
	IF  reduce 53
	ELSE  reduce 53
	WHILE  reduce 53
	DO  reduce 53
	FOR  reduce 53
	RETURN  reduce 53
	AND  reduce 53
	EQUAL  reduce 53
	GREAT_THEN  reduce 53
	GREAT_EQUAL  reduce 53
	LESS_THEN  reduce 53
	LESS_EQUAL  reduce 53
	NOT_EQUAL  reduce 53
	OR  reduce 53
	IDENTIFIER  reduce 53
	';'  reduce 53
	user_function  reduce 53
	')'  reduce 53
	'}'  reduce 53
	','  reduce 53
	']'  reduce 53

	operator  goto 76


state 47
	basic_expression : function_result .  (55)

	.  reduce 55


state 48
	basic_expression : terminal_const_values .  (56)

	.  reduce 56


state 49
	terminal_const_values : literals .  (69)

	.  reduce 69


state 50
	program : head_declaration program .  (3)

	.  reduce 3


state 51
	line_statement : line_statement ';' .  (7)

	.  reduce 7


state 52
	declaration : type list_of_declarators .  (6)
	list_of_declarators : list_of_declarators . ',' declarator_initialization  (45)

	','  shift 77
	$end  reduce 6
	BOOLEAN_TYPE  reduce 6
	CHAR_TYPE  reduce 6
	VOID  reduce 6
	INT  reduce 6
	STRING  reduce 6
	INTP  reduce 6
	CHARP  reduce 6
	IF  reduce 6
	ELSE  reduce 6
	WHILE  reduce 6
	DO  reduce 6
	FOR  reduce 6
	RETURN  reduce 6
	IDENTIFIER  reduce 6
	';'  reduce 6
	user_function  reduce 6
	'}'  reduce 6


state 53
	list_of_declarators : declarator_initialization .  (44)

	.  reduce 44


state 54
	declarator_initialization : declarator ASSIGNMENT . initializator  (46)

	_NULL  shift 78
	BITWISE_AND  shift 79
	BITWISE_XOR  shift 80
	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 43
	'|'  shift 44
	.  error

	complex_expression  goto 81
	initializator  goto 82
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	literals  goto 49


state 55
	declarator : declarator '(' . ')'  (73)
	declarator : declarator '(' . params_types_list ')'  (74)

	BOOLEAN_TYPE  shift 1
	CHAR_TYPE  shift 2
	VOID  shift 3
	INT  shift 4
	STRING  shift 5
	INTP  shift 6
	CHARP  shift 7
	')'  shift 83
	.  error

	type  goto 84
	params_types_list  goto 85


state 56
	declarator : declarator '[' . ']'  (75)
	declarator : declarator '[' . array_size ']'  (76)

	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 43
	']'  shift 86
	'|'  shift 44
	.  error

	complex_expression  goto 87
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	literals  goto 49
	array_size  goto 88


state 57
	boolean_expr_simple : NOT . '(' complex_expression boolean_operator boolean_expr ')'  (43)

	'('  shift 89
	.  error


state 58
	boolean_expr_simple : '(' . complex_expression boolean_operator boolean_expr ')'  (42)
	complex_expression : '(' . complex_expression ')'  (52)

	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 43
	'|'  shift 44
	.  error

	complex_expression  goto 90
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	literals  goto 49


59: shift/reduce conflict (shift 98, reduce 40) on OR
state 59
	boolean_expr_simple : complex_expression .  (40)
	boolean_expr_simple : complex_expression . boolean_operator boolean_expr  (41)

	AND  shift 91
	EQUAL  shift 92
	GREAT_THEN  shift 93
	GREAT_EQUAL  shift 94
	LESS_THEN  shift 95
	LESS_EQUAL  shift 96
	NOT_EQUAL  shift 97
	OR  shift 98
	';'  reduce 40
	')'  reduce 40
	','  reduce 40

	boolean_operator  goto 99
	OR_AND_DELIMITER  goto 100


state 60
	if_block : IF '(' boolean_expr . ')' line_statement  (18)
	if_block : IF '(' boolean_expr . ')' '{' program '}'  (19)
	if_block : IF '(' boolean_expr . ')' line_statement else_block  (20)
	if_block : IF '(' boolean_expr . ')' '{' program '}' else_block  (21)

	')'  shift 101
	.  error


61: shift/reduce conflict (shift 102, reduce 37) on OR
state 61
	boolean_expr : boolean_expr_simple .  (37)
	boolean_expr : boolean_expr_simple . OR boolean_expr  (39)

	OR  shift 102
	';'  reduce 37
	')'  reduce 37
	','  reduce 37


state 62
	while_block : WHILE '(' boolean_expr . ')' line_statement  (24)
	while_block : WHILE '(' boolean_expr . ')' '{' program '}'  (25)

	')'  shift 103
	.  error


state 63
	do_while_block : DO '{' program . '}' WHILE '(' boolean_expr ')' ';'  (27)

	'}'  shift 104
	.  error


state 64
	do_while_block : DO line_statement WHILE . '(' boolean_expr ')' ';'  (26)

	'('  shift 105
	.  error


state 65
	for_block_single_init : IDENTIFIER . ASSIGNMENT initializator  (32)

	ASSIGNMENT  shift 106
	.  error


state 66
	for_block : FOR '(' for_block_inits . ';' for_block_boolean_expr ';' for_block_inits_update ')' line_statement  (28)
	for_block : FOR '(' for_block_inits . ';' for_block_boolean_expr ';' for_block_inits_update ')' '{' program '}'  (29)

	';'  shift 107
	.  error


state 67
	for_block_inits : for_block_single_init .  (30)
	for_block_inits : for_block_single_init . ',' for_block_inits  (31)

	','  shift 108
	';'  reduce 30


state 68
	function_result : IDENTIFIER '(' . ')'  (60)
	function_result : IDENTIFIER '(' . parameters_list ')'  (61)

	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 43
	')'  shift 109
	'|'  shift 44
	.  error

	complex_expression  goto 110
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	parameters_list  goto 111
	literals  goto 49


state 69
	basic_expression : IDENTIFIER '[' . INT_CONSTANT_VALUE ']'  (58)

	INT_CONSTANT_VALUE  shift 112
	.  error


state 70
	complex_expression : '(' complex_expression . ')'  (52)

	')'  shift 113
	.  error


state 71
	basic_expression : '|' IDENTIFIER . '|'  (59)

	'|'  shift 114
	.  error


state 72
	operator : MINUS_OP .  (90)

	.  reduce 90


state 73
	operator : PLUS_OP .  (91)

	.  reduce 91


state 74
	operator : DIVISION_OP .  (92)

	.  reduce 92


state 75
	operator : MULT_OP .  (93)

	.  reduce 93


state 76
	complex_expression : basic_expression operator . complex_expression  (54)

	IDENTIFIER  shift 35
	STRING_VALUE  shift 36
	CHAR_LITERAL  shift 37
	INT_CONSTANT_VALUE  shift 38
	BOOL_CONSTANT_VALUE  shift 39
	BIN_CONSTANT_VALUE  shift 40
	OCT_CONSTANT_VALUE  shift 41
	HEX_CONSTANT_VALUE  shift 42
	'('  shift 43
	'|'  shift 44
	.  error

	complex_expression  goto 115
	basic_expression  goto 46
	function_result  goto 47
	terminal_const_values  goto 48
	literals  goto 49


state 77
	list_of_declarators : list_of_declarators ',' . declarator_initialization  (45)

	IDENTIFIER  shift 13
	.  error

	declarator_initialization  goto 116
	declarator  goto 29


state 78
	initializator : _NULL .  (50)

	.  reduce 50


state 79
	initializator : BITWISE_AND . IDENTIFIER  (48)

	IDENTIFIER  shift 117
	.  error


state 80
	initializator : BITWISE_XOR . IDENTIFIER  (49)

	IDENTIFIER  shift 118
	.  error


state 81
	initializator : complex_expression .  (51)

	.  reduce 51


state 82
	declarator_initialization : declarator ASSIGNMENT initializator .  (46)

	.  reduce 46


state 83
	declarator : declarator '(' ')' .  (73)

	.  reduce 73


state 84
	params_types_list : type .  (77)
	params_types_list : type . IDENTIFIER  (79)

	IDENTIFIER  shift 119
	')'  reduce 77
	','  reduce 77


state 85
	declarator : declarator '(' params_types_list . ')'  (74)
	params_types_list : params_types_list . ',' type  (78)
	params_types_list : params_types_list . ',' type IDENTIFIER  (80)

	')'  shift 120
	','  shift 121
	.  error


state 86
	declarator : declarator '[' ']' .  (75)

	.  reduce 75

